<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/widget27"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:id="@+id/widget33"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true">
		<LinearLayout android:id="@+id/widget36"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginTop="0px" android:layout_marginLeft="0px"
			android:layout_marginRight="0px" android:background="@drawable/color2">
			<TextView android:id="@+id/widget37" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="平均"
				android:textSize="18sp" android:textStyle="bold" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget38"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget39"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/widget40" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="数量"
						android:textSize="18sp" android:textStyle="bold"
						android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/widget41" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="值"
						android:textSize="18sp" android:textStyle="bold"
						android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget42"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/color6">
			<TextView android:id="@+id/widget43" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/pre_breakfast"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget44"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android">
				<LinearLayout android:id="@+id/widget45"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical">
					<LinearLayout android:id="@+id/widget46"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:layout_gravity="right">
						<TextView android:id="@+id/pre_b_c" android:layout_width="60px"
							android:layout_height="wrap_content" android:text="0"
							android:textSize="18sp" android:textColor="@drawable/black">
						</TextView>
						<TextView android:id="@+id/pre_b_v" android:layout_width="60px"
							android:layout_height="wrap_content" android:text="0.0"
							android:textSize="18sp" android:textColor="@drawable/black">
						</TextView>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget49"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/color5">
			<TextView android:id="@+id/widget50" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/post_breakfast"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget51"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget52"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/post_b_c" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0"
						android:textSize="18sp"
						android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/post_b_v" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0.0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget55"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/color3">
			<TextView android:id="@+id/widget56" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/pre_lunch"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget58"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget59"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/pre_l_c" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/pre_l_v" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0.0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget64"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/color4">
			<TextView android:id="@+id/widget65" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/post_lunch"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget66"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget67"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/post_l_c" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/post_l_v" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0.0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget64"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/color1">
			<TextView android:id="@+id/widget65" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/pre_dinner"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget66"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget67"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/pre_d_c" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/pre_d_v" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0.0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget64"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/green2">
			<TextView android:id="@+id/widget65" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/post_dinner"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget66"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget67"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/post_d_c" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/post_d_v" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0.0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/widget64"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_marginLeft="0px" android:layout_marginRight="0px"
			android:background="@drawable/green3">
			<TextView android:id="@+id/widget65" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/night"
				android:textSize="18sp" android:textColor="@drawable/black"
				android:layout_marginLeft="5px">
			</TextView>
			<LinearLayout android:id="@+id/widget66"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical">
				<LinearLayout android:id="@+id/widget67"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_gravity="right">
					<TextView android:id="@+id/night_c" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
					<TextView android:id="@+id/night_v" android:layout_width="60px"
						android:layout_height="wrap_content" android:text="0.0"
						android:textSize="18sp" android:textColor="@drawable/black">
					</TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
